z-index fix

--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@
 
 .barrier {
     background: green;
+    z-index: 2;
 }
 
 .bullet {
     background: blue;
+    z-index: 5;
 }
